# learning-python

./: Python版本管理.md  README.md  multiple_enums.yaml  pyenv 和 virtualenv 组合使用.md  uv.md
args/: main.py
async/: main.py  main2.py
bigdata/: 《1.大数据分析与机器学习简介》.pptx  《10.机器学习神器：XGBoost&LightGBM模型》.pptx  《11.特征工程之数据预处理》.pptx  《12.PCA主成分分析》.pptx  《13.数据聚类与分群》.pptx  《14.智能推荐系统 - 协同过滤算法》.pptx  《15.关联规则分析-Apriori模型》.pptx  《16.深度学习初窥之神经网络模型》.pptx  《2.数据分析的基本武器》.pptx  《3.线性回归模型》.pptx  《4.逻辑回归模型》.pptx  《5.决策树模型》.pptx  《6.朴素贝叶斯模型》.pptx  《7.K近邻算法》.pptx  《8.随机森林模型》.pptx
bigdata/源代码汇总-2020-12-16/: 答疑交流群及作者联系方式.docx
bigdata/源代码汇总-2020-12-16/第10章 机器学习神器：XGBoost&LightGBM模型/源代码汇总_Pycharm/: 10.1 XGBoost算法的简单代码实现.py  10.2  XGBoost算法案例实战1 - 金融反欺诈模型.py  10.3.1 XGBoost算法案例实战2 - 信用评分模型.py  10.3.2 XGBoost算法案例实战2 - 信用评分模型.py  10.4 LightGBM算法的简单代码实现.py  10.5 LightGBM算法案例实战1 - 客户违约预测模型.py  10.6 LightGBM算法案例实战2 - 广告收益回归预测模型.py
bigdata/源代码汇总-2020-12-16/第1章 大数据分析与机器学习简介/: Jupyter Notebook演示代码.ipynb
cmake_example/: CMakeLists.txt  README.md
matplotlib/: ReadMe.md  ex01.py
matplotlib/pick_colors/: ReadMe.md  app.py  kmeans.py
matplotlib/pick_colors/templates/: index.html
multicast/: main.py
multithread/: main.py  test.txt
opencv/: read_frame.py  skip_frame.py
opencv/color_distributions/: s1.py  s2.py  s3.py  s4.py
openpyxl/: example.xlsx  validation.py
processes/: ex1.py
pybind11/: ReadMe.md  pybind11_sum.cpp
scan/: s1.py
selenium/: ReadMe.md  main.py
udp/: ReadMe.md  client.py  server.py
web/: README.md  main.py  requirements.txt
yaml/: emun.py  main.py  safe_dump.py
(+84 files in other folders)
